@@ -168,6 +168,14 @@ namespace irr
 			{
 			}
 
+			virtual bool getReferenceRect(core::rect<s32>& rect) IRR_OVERRIDE
+			{ 
+				rect.UpperLeftCorner = core::vector2di(0,0);
+				rect.LowerRightCorner.X = (irr::s32)Device->Width;
+				rect.LowerRightCorner.Y = (irr::s32)Device->Height;
+				return false;
+			}
+
 		private:
 
 			void updateCursorPos()
